[gd_scene load_steps=10 format=2]

[ext_resource path="res://games/flappybird/bird.png" type="Texture" id=1]
[ext_resource path="res://games/flappybird/Player.gd" type="Script" id=2]
[ext_resource path="res://games/flappybird/background.png" type="Texture" id=3]
[ext_resource path="res://games/flappybird/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://games/flappybird/passWall.wav" type="AudioStream" id=5]
[ext_resource path="res://games/flappybird/gameEnd.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 9.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 112 )

[node name="World" type="Node2D"]

[node name="background" type="Sprite" parent="."]
position = Vector2( 0.918718, -1.59513 )
scale = Vector2( 0.819991, 0.717778 )
texture = ExtResource( 3 )

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Hitbox"]
shape = SubResource( 2 )

[node name="Reset" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Reset"]
position = Vector2( -257, 0 )
shape = SubResource( 3 )

[node name="Sound_Jump" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
stream = ExtResource( 4 )

[node name="Sound_Wall" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
stream = ExtResource( 5 )

[node name="Sound_GameEnd" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
stream = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = -192.0
margin_top = -112.0
margin_right = -152.0
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
margin_left = -64.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 80.0
text = "Press ,,space\" to flap"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="PlayerNode/Player/Hitbox" to="PlayerNode/Player" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Hitbox" to="PlayerNode/Player" method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Reset" to="PlayerNode/Player" method="_on_Reset_body_entered"]
